# evm-flashloans

./: .env.example  .gitignore  Cargo.toml  README.md
bot/: Cargo.toml
bot/config/: routes.base.json
bot/src/: config.rs  lib.rs  providers.rs
bot/src/types/: market.rs
contracts/: README.md  foundry.toml
contracts/script/: DeployBalancerFlashLoanSimple.s.sol
contracts/src/: BalancerFlashLoanSimple.sol
contracts/test/: BalancerFlashLoanSimple.Guards.t.sol  BalancerFlashLoanSimple.t.sol
docs/ours/: future-operating-playbook.md  testing-phase-strategy.md
scripts/: run_shadow_1h.cmd  run_shadow_1h.ps1
