[package]
name = "evm_flashloans_l2_arb"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
dotenvy = "0.15"
ethers = { version = "2.0", default-features = false, features = ["ws", "rustls"] }
futures-util = "0.3"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
